# votechain-api

./: .env.example  Cargo.toml  README.md  diesel.toml
contracts/abi/: VoteChain.json
migrations/2024-12-04-144335_add_user_auth/: up.sql
src/: auth.rs  blockchain.rs  config.rs  contracts.rs  db.rs  errors.rs  jwt.rs  main.rs  models.rs  routes.rs  schema.rs  vote_chain.rs
src/contracts/: votechain.rs
src/middlewares/: auth.rs
src/models/: users.rs
src/repository/: users.rs
src/routes/: blockchain.rs  health.rs  poll.rs  polls.rs  signin.rs  vote.rs
src/routes/auth/: refresh.rs  signin.rs
src/routes/polls/: cast_vote.rs  create.rs  get_poll.rs  get_polls.rs
src/services/: contract.rs  contract_service.rs
tests/: signin.sh
