[package]
name = "votechain-api"
version = "0.1.0"
edition = "2021"

[dependencies]

jsonwebtoken = "9"
actix-web = "4.9.0"
alloy = { version = "0.7.2", features = ["full"] }
diesel = { version = "2.2.6", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["error"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["serde"] }
